--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
           <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
             <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
               <div class="flex items-center justify-between w-full md:w-auto">
-                <a href="#"><%= logo_svg %></a>
+                <a href="#"><%= logo_svg('h-8 w-auto sm:h-10') %></a>
               </div>
             </div>
           </nav>
@@ -14,13 +14,13 @@
       </div>
 
       <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-        <div class="sm:text-center lg:text-left">
+        <div class="sm:text-center lg:text-left mb-10">
           <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
             <span class="block xl:inline">A testbed project:</span>
             <span class="block text-cyan-600 xl:inline">Ruby on Life</span>
           </h1>
           <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-            Simple project implementation to test a variety of tecnologies:
+            A personal demo project to test a variety of tecnologies:
           </p>
           <div class="columns-1 lg:columns-2">
             <div>Ruby on Rails 7</div>
@@ -37,6 +37,8 @@
             </div>
           </div>
         </div>
+
+        <%= render 'games/games', games: @latest_games, title: 'Latest Games' %>
       </main>
     </div>
   </div>
