--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,10 @@
             <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5', required: true, placeholder: 'email@example.com' %>
           </div>
           <div>
+            <%= f.label :full_name, class: 'text-sm font-medium text-gray-900 block mb-2' %>
+            <%= f.text_field :full_name, autocomplete: "full_name", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5', required: true, placeholder: 'Your name' %>
+          </div>
+          <div>
             <%= f.label :password, class: 'text-sm font-medium text-gray-900 block mb-2' %>
             <%= f.password_field :password, autocomplete: "new-password", class: 'bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5', required: true, placeholder: '••••••••' %>
           </div>
