--- a/app/views/games/_games.html.erb
+++ b/app/views/games/_games.html.erb
@@ -35,7 +35,7 @@
                   <%= link_to edit_game_path(game), class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
                   <% end %>
-                  <%= button_to @game, method: :delete, class: 'py-3 px-2 text-red-800 hover:text-red-500' do %>
+                  <%= button_to game, method: :delete, class: 'py-3 px-2 text-red-800 hover:text-red-500' do %>
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
                   <% end %>
                 </div>
