--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,48 +1,61 @@
-<script>
-  function downloadSvg (filename) {
-    var content = btoa(document.getElementById('svg-wrapper').innerHTML);
-    var link = document.createElement("a");
-    link.download = filename;
-    link.href = 'data:image/svg+xml;base64,' + content;
-    link.click();
-    delete link;
-  }
-</script>
+<div class="relative w-full max-w-2xl px-4 h-full md:h-auto">
+  <div class="bg-white rounded-lg shadow relative">
+    <div class="flex items-start justify-between p-5 border-b rounded-t">
+      <h3 class="text-xl font-semibold" title="<%= @game.code %>">
+        <span class="text-md text-gray-500 font-bold pr-4">
+          <%= @game.height %>
+          <span class="text-sm font-normal">x</span>
+          <%= @game.width %>
+        </span>
+        <%= @game.name || @game.code %>
+      </h3>
+      <span class="text-sm font-medium text-cyan-600 inline-flex items-center">
+        Generation <span class="text-xl font-bold mr-2 pl-2.5 py-0.5 rounded"><%= @grid.generation %></span>
+      </span>
+    </div>
 
-<%= link_to "Next Generation", game_generation_path(@game, generation: @grid.generation.succ) %> |
-<%= link_to "Edit this game", edit_game_path(@game) %> |
-<%= button_to "Destroy this game", @game, method: :delete %>
-<a onclick="downloadSvg('prova.svg')">Download image</a>
+    <div class="flex justify-center">
+      <%= link_to @game, title: 'Rewind Generations', class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12.066 11.2a1 1 0 000 1.6l5.334 4A1 1 0 0019 16V8a1 1 0 00-1.6-.8l-5.333 4zM4.066 11.2a1 1 0 000 1.6l5.334 4A1 1 0 0011 16V8a1 1 0 00-1.6-.8l-5.334 4z"></path></svg>
+      <% end %>
+      <%= link_to game_generation_path(@game, generation: @grid.generation.succ), title: 'Next Generation', class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+      <% end %>
+      <% if @game.public %>
+        <%= link_to publish_game_path(@game.code, public: 'false'), data: { turbo_method: :patch }, title: 'Unpublish', class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg>
+        <% end %>
+      <% else %>
+        <%= link_to publish_game_path(@game.code, public: 'true'), data: { turbo_method: :patch }, title: 'Publish', class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"></path></svg>
+        <% end %>
+      <% end %>
+      <%= link_to edit_game_path(@game), title: 'Edit Game', class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
+      <% end %>
+      <%= link_to @game, title: 'Delete Game', class: 'py-3 px-2 text-red-800 hover:text-red-500', data: { turbo_method: :delete, turbo_confirm: 'This operation is not reversible, are you sure?' } do %>
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path></svg>
+      <% end %>
+      <a title="Download SVG Image" onclick="downloadSvg('<%= @game.code %>.svg', document.getElementById('svg-wrapper').innerHTML)" class="py-3 px-2 text-cyan-800 hover:text-cyan-500 cursor-pointer">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+      </a>
+      <%= link_to download_game_path(@game, generation: @grid.generation), title: 'Download Grid File', class: 'py-3 px-2 text-cyan-800 hover:text-cyan-500' do %>
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path></svg>
+      <% end %>
+    </div>
 
-<div id="<%= dom_id @game %>">
-  <div id="svg-wrapper" class="flex">
-    <%= grid_to_svg(@grid, class: 'fill-cyan-600 max-w-sm border-2 rounded-lg shadow-lg') %>
+    <div id="<%= dom_id @game %>" class="pb-3">
+      <%= link_to game_generation_path(@game, generation: @grid.generation.succ) do %>
+        <div id="svg-wrapper" class="flex justify-center p-2">
+          <%= grid_to_svg(@grid, class: 'fill-cyan-600 max-w-xl border-2 rounded-lg shadow-lg') %>
+        </div>
+      <% end %>
+    </div>
+
+    <%- if @game.description.present? %>
+      <div class="p-6">
+        <%= @game.description %>
+      </div>
+    <% end %>
   </div>
-  <p>
-    <strong>Code:</strong>
-    <%= @game.code %>
-  <p>
-    <strong>Generation:</strong>
-    <%= @grid.generation %>
-  </p>
-  <p>
-    <strong>Height:</strong>
-    <%= @game.height %>
-  </p>
-  <p>
-    <strong>Width:</strong>
-    <%= @game.width %>
-  </p>
-  <p>
-    <strong>Public:</strong>
-    <%= @game.public %>
-  </p>
-  <p>
-    <strong>Name:</strong>
-    <%= @game.name %>
-  </p>
-  <p>
-    <strong>Description:</strong>
-    <%= @game.description %>
-  </p>
 </div>
