--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,12 @@
                 <span class="self-center whitespace-nowrap">Ruby on Life</span>
               </a>
             </div>
-            <%= link_to 'New Game', new_game_path %>
-            <%= link_to 'My Games', games_path %>
             <%- if current_user %>
+              <%= link_to 'New Game', new_game_path %>
+              <%= link_to 'My Games', games_path %>
               <%= link_to "Sign out #{current_user.full_name}", destroy_user_session_path, data: { 'turbo-method': :delete } %>
+            <% else %>
+              <%= link_to 'Latest Games', latest_games_path %>
             <% end %>
           </div>
         </div>
